--- a/CRM_Project/ios/Podfile
+++ b/CRM_Project/ios/Podfile
@@ -8,6 +8,8 @@ target 'CRM_Project' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'CRM_ProjectTests' do
     inherit! :complete
     # Pods for testing
