--- a/CRM_Project/package.json
+++ b/CRM_Project/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.2.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-calendars": "^1.403.0",
     "react-native-circular-progress": "^1.3.6",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-picker": "^2.3.4",
