--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.2.0",
+    "@nestjs/passport": "^7.1.2",
     "@nestjs/platform-express": "^7.5.2",
     "@nestjs/swagger": "^4.7.3",
     "@nestjs/typeorm": "^7.1.4",
