--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^8.2.0",
     "express-validator": "^6.6.1",
     "pg": "^8.5.1",
+    "pg-listen": "^1.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
